--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header>
     <h1>Nicolas Paredes</h1>
 </header>
-<img id="studentimage" src="image/nicolas.jpg" alt="nicolas_pic">
+<img id="studentimage" src="image/nicolas.jpeg" alt="nicolas_pic">
 
 
 </body>
