--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
     <h1>Nicolas Paredes</h1>
 </header>
 <img id="studentimage" src="image/nicolas.jpeg" alt="nicolas_pic">
+<nav>
+    <h2>WDD 230: Assignment Portal</h2>
+    <ul>
+        <li>
+            Lesson 01: <a href="lesson1/design-principles.html">Design principles</a>
+        </li>
+        <li>
+            Lesson 02: <a href="lesson2/index.html">Website Planning Document - The Weather Site</a> 
+        </li>
+    </ul>
+  </nav>
 
 
 </body>
