--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name="description" content="Assignment portal by Nicolas Paredes in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/main.css">
+<script src="js/date.js"></script>
 </head>
 
 <body>
@@ -24,6 +25,18 @@
         </li>
     </ul>
   </nav>
+
+  <footer>
+    <div id="copyright">
+      &copy; <span id="currentYear"></span> | Nicolas Paredes | Copiapo | <a href="https://www.byui.edu/online"
+        target="blank">BYUI Online Learning</a>
+    </div>
+    <div class="dates">
+      Last Updated: <span id="lastUpdated"></span>
+    </div>
+  </footer>
+
+
 
 
 </body>
