--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -1,9 +1,78 @@
-<!doctype html>
+
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>WDD 230 Assignment Portal</title>
-<meta name="description" content="Assignment portal by Nicolas Paredes in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
-<link rel="stylesheet" href="css/normalize.css">
-<link rel="stylesheet" href="css/main.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Nicolas Paredes">
+  <meta name="description"
+    content="Weather site project by Nicolas Paredes in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
+  <title>Copiapo Weather information</title>
+  <link rel="stylesheet" href="../css/normalize.css">
+  <link href="css/small.css" rel="stylesheet">
+  <link href="css/medium.css" rel="stylesheet">
+  <link href="css/large.css" rel="stylesheet">
+
 </head>
+
+<body>
+  <header>
+    <a href="lesson2"><img src="image/ºicon.png" alt="icon"></a>
+    <h1 class="header-1">Copiapo Weather information</h1>
+    <h2 class="header-2">Your route news</h2>
+  </header>
+  <nav>
+    <ul>
+      <li><a href="index.html">Site Purpose</a></li>
+      <li><a href="target-audience.html">Target Audience</a></li>
+      <li><a href="color-scheme.html">Color Scheme</a></li>
+      <li><a href="typography.html">Typography</a></li>
+    </ul>
+  </nav>
+  <main>
+    <h2 class="main-headline">Site Purpose</h2>
+    <p>The main purpose of "Copiapo Weather information" is to inform people who work in mines near Copiapo city about 
+        the weather on the different routes that they can take to arrive in the mines. People can visit this site to 
+        see the route state and weather in the zone, also they can see the hours where the fog is present on the route 
+        preventing drivers to take dangerous trips and giving safer alternatives.
+    </p>
+    <h3>Home Page</h3>
+    <p>
+      The home page will have a current weather story, the photo of the day, and sections for each town. The information
+      sections include breaking news headlines, article titles, and upcoming events scheduled in the town. An image of a
+      prominent location in town will be displayed in each section.
+    </p>
+    <h3>City Pages</h3>
+    <p>
+      Three pages will each be dedicated to Preston, Soda Springs, and Fish Haven. Each page will have town-specific
+      weather forecasts, local news, relevant articles, and an event calendar. The pages will also provide information on local
+      attractions for each city. Individuals or groups will be able to advertise events that they are hosting scheduled
+      for each town.
+    </p>
+    <h3>Storm Center</h3>
+    <p>The Storm Center will provide in depth weather stories and educational information regarding the local
+      climate. Important information will be posted on the Storm Center page when severe weather is threatens the
+      region.
+      Closures of schools and cancellations of events due severe weather conditions will be posted in the Storm Center
+      page.
+    </p>
+    <h3>Gallery</h3>
+    <p>The Gallery will provide a medium for the community members to upload images that they capture during everyday
+      activities or special events. The user will be asked to provide a brief description of the image,
+      including location and background information.
+    </p>
+    <h3>Site Domain</h3>
+    <p>The site domain will be <a
+        href="https://domains.google.com/registrar/search?hl=en-US&authuser=3&searchTerm=idahosoutheast.org&tab=1"
+        target="_blank">www.idahosoutheast.org</a>.
+      The site domain was searched for on Google Domains and verified that it is available.
+    </p>
+  </main>
+  <footer>
+    <p>&copy; <span id="copyrightyr"></span> | Rozlyn Vaughn</p>
+    <p>Last updated: <span id="lastupdate"></span></p>
+  </footer>
+  <script src="../js/script.js"></script>
+</body>
+
+</html>
