--- a/lesson2/target-audience.html
+++ b/lesson2/target-audience.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Nicolas Paredes">
   <meta name="description"
     content="Weather site project by Nicolas Paredes in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
-  <title>CWI - Copiapo Weather Information</title>
+  <title>CWI - Target-Audience</title>
   <link rel="stylesheet" href="../css/normalize.css">
   <link href="css/small.css" rel="stylesheet">
   <link href="css/medium.css" rel="stylesheet">
@@ -20,6 +20,7 @@
     <img src="image/icon.png" alt="icon">
     <h1>Copiapo Weather Information</h1>
     <h2>Your route news</h2>
+    
   </header>
   <nav>
     <ul>
@@ -30,18 +31,24 @@
     </ul>
   </nav>
   <main>
-    <h2>Site Purpose</h2>
-    <p>The main purpose of "Copiapo Weather information" is to inform people who work in mines near Copiapo city about 
-        the weather on the different routes that they can take to arrive in the mines. People can visit this site to 
-        see the route state and weather in the zone, also they can see the hours where the fog is present on the route 
-        preventing drivers to take dangerous trips and giving safer alternatives.
+    <h2>Target Audience</h2>
+    <p>The audience for this site will be people who work on mining near Copiapo. 
+        They travel on light vehicles thru the mountains often in the morning, 
+        the climate conditions can lead to a dangerous situation.
+        They will know about the weather near to the mines and will take the better route.
     </p>
     
-    <h2>Site Domain</h2>
-    <p>The site domain will be <a
-        href="www.copiapoweather.com"
-        target="_blank">www.copiapoweather.com</a>.
-    </p>
+    <h2>Personas:</h2>
+    <p>Cesar: Electrical Engineer, mine worker, age: 40.</p>
+    <p>Aldo Molina: Mining Engineer, mine worker, age: 28.</p>
+    <h2>Scenarios:</h2>
+    <ul>
+        <li>Cesar needs to go work and will drive to the mine.</li>
+        <li>Aldo needs to move a heavy machine from a mine to other.</li>
+        <li>Cesar needs to move electrical equipment from Copiapo to a mine.</li>
+        <li>It is to late, Cesar and Aldo have to return home.</li>
+        <li>It is raining, Cesar and Aldo needs to know which route take.</li>
+      </ul>
   </main>
   <footer>
     <p id="foot">&copy; <span id="currentYear"></span> | Nicolas Paredes</p>
