--- a/lesson2/color-scheme.html
+++ b/lesson2/color-scheme.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Nicolas Paredes">
   <meta name="description"
     content="Weather site project by Nicolas Paredes in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
-  <title>CWI - Target-Audience</title>
+  <title>CWI - Color</title>
   <link rel="stylesheet" href="../css/normalize.css">
   <link href="css/small.css" rel="stylesheet">
   <link href="css/medium.css" rel="stylesheet">
