--- a/weather/preston.html
+++ b/weather/preston.html
@@ -18,7 +18,7 @@
   <header>
     <img src="image/icon.png" alt="icon">
     <h1>Copiapo Weather Information</h1>
-    <h2>Your route news</h2>
+    <div class="caquita"><h2>Your route news</h2></div>
   </header>
   <nav class="navigation">
     <ul class="menu">
@@ -31,18 +31,32 @@
     </ul>
   </nav>
   <main>
-    <h2>Site Purpose</h2>
-    <p>The main purpose of "Copiapo Weather information" is to inform people who work in mines near Copiapo city about 
-        the weather on the different routes that they can take to arrive in the mines. People can visit this site to 
-        see the route state and weather in the zone, also they can see the hours where the fog is present on the route 
-        preventing drivers to take dangerous trips and giving safer alternatives.
+  <div>
+    <h2>Route C-325</h2>
+    <p>
+      The best option to reach north mines today.
     </p>
+  </div>
+  <div>
+    <h2>Viñita Azul</h2>
+    <p>
+      The best option to reach Candelaria Mine.
+    </p>
+  </div>
+  <div>
+    <h2>Route 5</h2>
+    <p>
+       The best option to reach south mines.
+    </p>
+  </div>
+  <div>
+    <h2>Warning</h2>
+    <p>
+      High temperatures in the Copiapo zone. Avoid walking under the sun.
+    </p>
+  </div>
     
-    <h2>Site Domain</h2>
-    <p>The site domain will be <a
-        href="www.copiapoweather.com"
-        target="_blank">www.copiapoweather.com</a>.
-    </p>
+
   </main>
   <footer>
     <p id="foot">&copy; <span id="currentYear"></span> | Nicolas Paredes</p>
