--- a/weather/preston.html
+++ b/weather/preston.html
@@ -59,8 +59,8 @@
 
   </main>
   <footer>
-    <p id="foot">&copy; <span id="currentYear"></span> | Nicolas Paredes</p>
-    <p id="foot">Last updated: <span id="lastUpdated"></span></p>
+    <p>&copy; <span id="currentYear"></span> | Nicolas Paredes</p>
+    <p>Last updated: <span id="lastUpdated"></span></p>
   </footer>
   <script src="js/date.js"></script>
 </body>
