--- a/weather/preston.html
+++ b/weather/preston.html
@@ -18,7 +18,7 @@
   <header>
     <img src="image/icon.png" alt="icon">
     <h1>Copiapo Weather Information</h1>
-    <div class="caquita"><h2>Your route news</h2></div>
+    <div></div><h2>Your route news</h2></div>
   </header>
   <nav class="navigation">
     <ul class="menu">
